--- a/api/index.css
+++ b/api/index.css
@@ -8,6 +8,7 @@
 
     cursor: default;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     font-size: 18px;
   }
 
