--- a/extension/src/popup.css
+++ b/extension/src/popup.css
@@ -12,6 +12,7 @@
 
     cursor: default;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     font-size: 16px;
   }
 
