--- a/extension/src/popup.css
+++ b/extension/src/popup.css
@@ -1,6 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* https://tailwindcss.com/docs/using-with-preprocessors#build-time-imports */
+
+@import "tailwindcss/base";
+@import "./colors.css";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
 
 @layer base {
   :root {
@@ -23,10 +28,6 @@
 }
 
 @layer utilities {
-  .break-word {
-    word-break: break-word;
-  }
-
   [hidden] {
     @apply hidden;
   }
